--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,15 @@ authors = ["danuarta.wiratama <danuarta.wiratama@gdn-commerce.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.63.0"
+SQLAlchemy = "^1.3.22"
+python-jose = "^3.2.0"
+alembic = "^1.4.3"
+psycopg2-binary = "^2.8.6"
+uvicorn = "^0.13.3"
+pydantic = {extras = ["email"], version = "^1.7.3"}
+passlib = "^1.7.4"
+emails = "^0.6"
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
